--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: NetRival Tools
-description: Some random web tools
+title: NetRival
+description: 
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-modernist
 
 gems:
